home card css spacing fixd, navbar simplified

--- a/client/src/pages/home/homeOwner.css
+++ b/client/src/pages/home/homeOwner.css
@@ -11,14 +11,15 @@
 
 #details {
   margin: auto;
-  width:max-content;
+  width:100% max-content;
   height:5%;
   background-color:#fff;
   display:grid;
-  grid-template-columns: 200px 200px;
+  grid-template-columns: 50% 50%;
   grid-row: auto auto;
-  grid-column-gap: -10%;
-  grid-row-gap: -10%;
+  margin-left: auto;
+  margin-right: auto;
+
 
 }
 
@@ -35,3 +36,6 @@
     line-height: 80%;
 }
 
+.container {
+  width: 100%;
+}
